--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
         "lodash": "^4.17.19",
         "persian-date": "^1.1.0",
         "postcss": "^8.1.14"
+    },
+    "dependencies": {
+        "bootstrap-icons": "^1.8.1"
     }
 }
